--- a/composer.json
+++ b/composer.json
@@ -1,23 +1,17 @@
 {
     "name": "mouf/famfamfam",
-    "description": "TODO",
-    "keywords": ["security", "user", "user management"],
-    "homepage": "https://github.com/thecodingmachine/famfamfam",
+    "description": "This is the Famfamfam silk icon set, wrapped into an easy to use PHP composer package.",
+    "keywords": ["icons", "famfamfam", "silk"],
+    "homepage": "http://www.famfamfam.com/",
     "type": "library",
-    "license": "MIT",
+    "license": "Creative Commons Attribution 2.5 License",
     "authors": [
         {
-            "name": "David Négrier",
-            "email": "d.negrier@thecodingmachine.com",
-            "homepage": "http://mouf-php.com"
+            "name": "Mark James",
+            "homepage": "http://www.famfamfam.com/"
         }
     ],
     "require": {
     	"php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Mouf": "src/"
-        }
     }
 }
