--- a/composer.json
+++ b/composer.json
@@ -13,5 +13,10 @@
     ],
     "require": {
     	"php": ">=5.3.0"
+    },
+    "extra": {
+    	"mouf": {
+    		"logo": "logo.png"
+    	}
     }
 }
